# documind

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py
api/app/: config.py  database.py  main.py  worker.py
api/app/auth/: deps.py  router.py  schemas.py  security.py  service.py
api/app/models/: __init__.py  refresh_token.py  user.py  workspace.py
api/app/workspaces/: router.py  schemas.py  service.py
api/documind_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/tests/: conftest.py  test_auth.py  test_workspaces.py
web/: eslint.config.mjs  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/dashboard/: page.tsx
web/app/login/: page.tsx
web/lib/: api.ts
